apocalypse: rewrite Aya using locally nameless and HOAS+JIT compilation
Co-authored-by: HoshinoTented <hoshinotented@qq.com>